<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/current_weather">

    <fragment
        android:id="@+id/current_weather"
        android:name="com.freddev.weatherapp.ui.weather.CurrentWeatherFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_current_weather" >
        <action
            android:id="@+id/action_current_weather_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/future_weather"
        android:name="com.freddev.weatherapp.ui.future_climate.FutureWeatherFragment"
        android:label="@string/title_days"
        tools:layout="@layout/fragment_future_weather" />

    <fragment
        android:id="@+id/settings"
        android:name="com.freddev.weatherapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/futureWeatherDetailsFragment"
        android:name="com.freddev.weatherapp.ui.future_climate.FutureWeatherDetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_future_weather_details" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.freddev.weatherapp.ui.weather.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <argument
            android:name="city"
            app:argType="string"
            android:defaultValue="New York" />
    </fragment>
</navigation>